# procedural-facade-modeling

./: .gitignore  CMakeLists.txt  README.md
src/: building_utils.h  geom_bool.cpp  geom_bool.h  geom_utils.cpp  geom_utils.h  grammar.h  main.cpp  node.h  optimizer.h  prob_utils.h  tagged_shape.cpp  tagged_shape.h  test_main.cpp  wrap_igl.cpp  wrap_igl.h  yocto_utils.cpp  yocto_utils.h
src/apps/: yiview.cpp  yview.cpp
